# win10toast-pimped

./: .gitignore  MANIFEST.in  README.md  __init__.py  example.py  requirements.txt  setup.cfg
test/: example.py
tests/: example.py
win10toast_click/: __init__.py
