[metadata]
name = win10toast-click
version = 0.1.2
author = vardecab
author_email = 
description = An easy-to-use Python library for displaying Windows 10 Toast Notifications. Improved version of win10toast and win10toast-persist to include callback_on_click to run a function on notification click, for example to open a URL.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vardecab/win10toast-click
project_urls =
    Bug Tracker = https://github.com/vardecab/win10toast-click/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python :: 3
    Operating System :: Microsoft
    Environment :: Win32 (MS Windows)
    Operating System :: Microsoft :: Windows :: Windows 10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires = 
    pywin32
    setuptools
[bdist_wheel]
universal=1
